--- a/sites/all/themes/custom/ziquid_games/less/page.less
+++ b/sites/all/themes/custom/ziquid_games/less/page.less
@@ -6,6 +6,7 @@ body {
       margin: 0px;
     }
   }
+  overflow-x: hidden;
 }
 
 footer {
@@ -20,8 +21,8 @@ footer {
     position: relative;
     letter-spacing: 0.25em;
   }
-  .turf-wars-atlanta {
-    .turf-wars, .atlanta {
+  .uprising-atlanta {
+    .uprising, .atlanta {
       letter-spacing: 0.25em;
       display: inline-block;
     }
